# holon-lab-ddos

./: .gitignore  Cargo.toml  README.md
control-plane/: Cargo.toml
control-plane/src/: main.rs
docs/: PACKET_GENERATION_DEEP_DIVE.md
http-lab/: README.md
http-lab/docs/: ARCHITECTURE.md  CONCEPT-MANIFOLD-FIREWALL.md  DASHBOARD-PLAN.md  DESIGN-STRIPED-ENCODING.md  EXPERIMENT-DVWA-NIKTO.md  EXPERIMENT-MULTI-ATTACK.md  FINDINGS-MANIFOLD-FIREWALL.md  FINDINGS-RESIDUAL-PROFILE.md  NEXT-INVESTIGATIONS.md  PARAM-SWEEP.md  PROGRESS.md  RULE-LANGUAGE.md  SIGNIFICANCE.md  TECH-DEBT.md
http-lab/generator/: Cargo.toml
http-lab/generator/src/: main.rs
http-lab/proxy/: Cargo.toml
http-lab/proxy/benches/: tree_perf.rs
http-lab/proxy/examples/: param_sweep.rs
http-lab/proxy/src/: denial_token.rs  enforcer.rs  expr.rs  expr_tree.rs  http.rs  lib.rs  manifold.rs  tls.rs  tls_names.rs  tree.rs  types.rs
http-lab/runner/: Cargo.toml
http-lab/runner/src/: engram_cli.rs  main.rs
http-lab/runner/tests/: integration.rs
http-lab/scenarios/: ddos-demo.json  demo_engram_memory.json  demo_self_calibrating.json  demo_shape_and_crosslayer.json  demo_spectral_detection.json  demo_zero_to_mitigation.json  manifold_firewall.json  multi_attack.json  warmup_only.json
http-lab/scenarios/dvwa/: docker-compose.yml  dvwa_browser_agent.py  multi_agent.py  parse_sweep_log.sh  requirements.txt  run-multi-attack.sh  run-nikto.sh  run-threshold-sweep.sh  setup-local-network.sh  source_forwarder.py  test_xai_latency.py
http-lab/scripts/: build.sh  demo.sh  setup.sh  teardown.sh  threshold_sweep.py
http-lab/sidecar/: Cargo.toml
http-lab/sidecar/src/: detection.rs  detectors.rs  field_tracker.rs  lib.rs  metrics_server.rs  rule_manager.rs
http-lab/sidecar/static/: dashboard.html  waf_dashboard.html
veth-lab/: README.md
veth-lab/docs/: BUILD.md  CAPACITY.md  COMMIT-VSA-ENHANCEMENTS.md  DECAY-PROCESSING.md  DECISIONS.md  EBPF.md  EDN-RULES.md  ENGRAM-MEMORY.md  GENERATOR-JITTER.md  IMPL-NOTES-PREDICATES.md  IP-HEADER-FINGERPRINTING.md  METRICS-DASHBOARD.md  OPERATIONS.md  PAYLOAD-BYTE-MATCH.md  PLAN-NEXT.md  PROGRESS.md  QUANTUM.md  RETE.md  RULES.md  SCALING.md  VISION.md  VSA-ENHANCEMENTS-TEST.md  VSA-NOVEL.md  VSA-UTILIZATION-AUDIT.md  VSA.md  dag_raw_snapshot.json  dag_ui_snapshot.json
veth-lab/filter/: Cargo.toml
veth-lab/filter-ebpf/: Cargo.toml
veth-lab/filter-ebpf/src/: main.rs
veth-lab/filter/examples/: hash_counter_names.rs
veth-lab/filter/src/: lib.rs  tree.rs
veth-lab/generator/: Cargo.toml
veth-lab/generator/src/: main.rs
veth-lab/scenarios/: FEATURE-TEST-PLAN.md  comprehensive-predicate-test.edn  comprehensive-test-traffic.json  feature-test-traffic.json  iterate.json  os-fingerprint-test.json  payload-anomaly-detection.json  pps-accuracy.json  quick-test.json  realistic.json  rules-100.edn  rules-10k.edn  rules-10k.json  rules-feature-test.edn  rules-named-test.edn  stress-test-short.json  stress-test.json  test-in-predicate.edn  test-ip-fingerprint.edn  test-mask-predicates.edn  test-multitenant-byte-match-multiline.edn  test-multitenant-byte-match.edn  test-multitenant-traffic.json  test-range-predicates.edn  vsa-enhancements-test.json
veth-lab/scripts/: build.sh  decode_counters.py  demo.sh  generate_feature_test_rules.py  generate_ruleset.py  generate_ruleset_edn.py  run-generator.sh  run-loader.sh  run-sidecar.sh  setup.sh  status.sh  teardown.sh  test_edn_parser.sh  test_edn_quick.py  test_parse_quick.sh
veth-lab/sidecar/: Cargo.toml
veth-lab/sidecar/src/: detection.rs  detectors.rs  field_tracker.rs  main.rs  metrics_server.rs  payload_tracker.rs  rule_manager.rs  rules_parser.rs
veth-lab/sidecar/static/: dashboard.html
xdp-filter/: Cargo.toml
xdp-filter-ebpf/: Cargo.toml
xdp-filter-ebpf/src/: main.rs
xdp-filter/src/: lib.rs
xdp-generator/: Cargo.toml
xdp-generator/src/: af_xdp.rs  lib.rs
xtask/src/: main.rs
