[workspace]
resolver = "2"
members = [
    "control-plane",
    "xdp-filter",
    "xdp-filter-ebpf",
    "xdp-generator",
    "xtask",
]

[workspace.dependencies]
aya = "0.12"
aya-log = "0.2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
