[package]
name = "xdp-filter-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

[[bin]]
name = "xdp-filter"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = "abort"

[profile.release]
lto = true
panic = "abort"
