[package]
name = "xdp-filter-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pin specific versions to avoid build issues
aya-ebpf = "=0.1.0"
aya-ebpf-bindings = "=0.1.0"
aya-ebpf-cty = "=0.2.1"

[[bin]]
name = "xdp-filter"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = "abort"

[profile.release]
lto = true
panic = "abort"
