[package]
name = "xdp-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

# TODO: Re-enable once eBPF toolchain is fixed
# aya = { workspace = true }
# aya-log = { workspace = true }
