[package]
name = "xdp-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
aya = "0.13"
aya-log = "0.2"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"

[[bin]]
name = "test_xdp"
path = "src/bin/test_xdp.rs"

[[bin]]
name = "pcap_capture"
path = "src/bin/pcap_capture.rs"
