[package]
name = "xdp-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
rand = "0.8"
libc = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "test_af_xdp"
path = "src/bin/test_af_xdp.rs"

[[bin]]
name = "test_sendmmsg"
path = "src/bin/test_sendmmsg.rs"
