[package]
name = "veth-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
libc = "0.2"
signal-hook = "0.3"

[[bin]]
name = "veth-generator"
path = "src/main.rs"
