[package]
name = "veth-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local veth-filter for XDP management
veth-filter = { path = "../filter" }

# Holon for VSA-based detection (relative path to holon-rs)
holon = { path = "../../../holon-rs" }

# Async runtime
tokio = { workspace = true }
anyhow = { workspace = true }
aya = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
edn-rs = "0.18.0"

# Metrics server dependencies
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"

[[bin]]
name = "veth-sidecar"
path = "src/main.rs"
